initialise promo section

--- a/html/index.html
+++ b/html/index.html
@@ -126,7 +126,114 @@
 <!--------services----------->
 <section id="services">
     <div class="container">
-        <h1>Our services</h1></div>
+        <h1>Our services</h1>
+    <div class="row services">
+        <div class="col-md-3 text-center">
+            <div class="icon">
+                <i class="fa fa-television" ></i>
+            </div>
+            <h3>Web development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,
+                 adipisicing elit.
+                </p>
+        </div>
+        <div class="col-md-3 text-center">
+            <div class="icon">
+                <i class="fa fa-pinterest" ></i>
+            </div>
+            <h3>App development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,
+                 adipisicing elit.
+                </p>
+        </div>
+        <div class="col-md-3 text-center">
+            <div class="icon">
+                <i class="fa fa-amazon"></i>
+            </div>
+            <h3>App development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,
+                 adipisicing elit.
+                </p>
+        </div>
+        <div class="col-md-3 text-center">
+            <div class="icon">
+                <i class="fa fa-bath" ></i>
+            </div>
+            <h3>Web development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur,
+                 adipisicing elit.
+                </p>
+        </div>
+    </div>
+</div>
+</section>
+<!-----------------Team Members-------------->
+<section id="team">
+<div class="container">
+    <h1>Our Team</h1>
+    <div class="row">
+    <div class="col-md-3 profile-pic text center">
+    <div class="img-box">
+        <img src="/images/team1.jpg" class="img-responsive">
+        <ul>
+            <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+            <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+            <a href="#"><li><i class="fa fa-whatsapp"></i></li></a>
+        </ul>
+    </div>
+    <h2>Adam Carter</h2>
+    <h3>Founder / CEO</h3>
+    <p>Lorem ipsum dolor sit amet consectetur</p>
+    </div>
+    <div class="col-md-3 profile-pic text center">
+        <div class="img-box">
+            <img src="/images/team2.jpeg" class="img-responsive">
+            <ul>
+                <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                <a href="#"><li><i class="fa fa-whatsapp"></i></li></a>
+            </ul>
+        </div>
+        <h2>Jordyn Maks</h2>
+        <h3>Business Head</h3>
+        <p>Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+        <div class="col-md-3 profile-pic text center">
+            <div class="img-box">
+                <img src="/images/team3.jpeg" class="img-responsive">
+                <ul>
+                    <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                    <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                    <a href="#"><li><i class="fa fa-whatsapp"></i></li></a>
+                </ul>
+            </div>
+            <h2>Dion Alexandra</h2>
+            <h3>Marketing Head</h3>
+            <p>Lorem ipsum dolor sit amet consectetur</p>
+            </div>
+            <div class="col-md-3 profile-pic text center">
+                <div class="img-box">
+                    <img src="/images/team4.jpeg" class="img-responsive">
+                    <ul>
+                        <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+                        <a href="#"><li><i class="fa fa-facebook"></i></li></a>
+                        <a href="#"><li><i class="fa fa-whatsapp"></i></li></a>
+                    </ul>
+                </div>
+                <h2>Jaylin Makcori</h2>
+                <h3>UI Designer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+            
+    </div>
+</div>
+</section>
+<!------------promo------------------>
+<section id="promo">
+    <div class="container">
+        <p>Get Free Domain Name and Web Hosting</p>
+        <a href="#" class="btn btn-primary">contact us</a>
+    </div>
 </section>
 </body>
 </html>
