--- a/html/index.html
+++ b/html/index.html
@@ -235,5 +235,33 @@
         <a href="#" class="btn btn-primary">contact us</a>
     </div>
 </section>
+<!----------price plan----------->
+<section id="price">
+<div class="container">
+        <h1>Price Plans</h1>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="single-price">
+                    <div class="price-head">
+                        <h2>Free </h2>
+                        <p>$0/<span>month</span></p>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li><i class="fa fa-check-circle-o" ></i>5GB space</li>
+                            <li><i class="fa fa-check-circle-o" ></i>10GB space</li>
+                            <li><i class="fa fa-times-circle-o"></i>15 Email  Account</li>
+                            <li><i class="fa fa-times-circle-o"></i> Domain</li>
+                            <li><i class="fa fa-times-circle-o"></i>Unlimited Support</li>
+                        </ul>
+                    </div>
+                    <div class="price-button">
+                        <a href="#" class="buy-btn ">join free</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+</section>
 </body>
 </html>
