replace main.html with index.html

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
                 <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT US</a>
+                <a class="nav-link" href="#about">ABOUT US</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">SERVICES</a>
+                <a class="nav-link" href="#services">SERVICES</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#" >OUR TEAM</a>
+                <a class="nav-link " href="#team" >OUR TEAM</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#" >PRICE PLAN</a>
+                <a class="nav-link " href="#price" >PRICE PLAN</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#" >TESTIMONIALS</a>
+                <a class="nav-link " href="#testimonials" >TESTIMONIALS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="#" >CONTACTS</a>
+                <a class="nav-link " href="#contact" >CONTACTS</a>
             </li>
               </ul>
               </div>
@@ -232,7 +232,7 @@
 <section id="promo">
     <div class="container">
         <p>Get Free Domain Name and Web Hosting</p>
-        <a href="#" class="btn btn-primary">contact us</a>
+        <a href="#contact" class="btn btn-primary">contact us</a>
     </div>
 </section>
 <!----------price plan----------->
@@ -260,8 +260,146 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="single-price">
+                    <div class="price-head">
+                        <h2>Start Up</h2>
+                        <p>$10/<span>month</span></p>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li><i class="fa fa-check-circle-o" ></i>10GB space</li>
+                            <li><i class="fa fa-check-circle-o" ></i>100GB space</li>
+                            <li><i class="fa fa-check-circle-o"></i>15 Email  Account</li>
+                            <li><i class="fa fa-times-circle-o"></i> Domain</li>
+                            <li><i class="fa fa-times-circle-o"></i>Unlimited Support</li>
+                        </ul>
+                    </div>
+                    <div class="price-button">
+                        <a href="#" class="buy-btn ">Buy now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="single-price">
+                    <div class="price-head">
+                        <h2>Business </h2>
+                        <p>$50/<span>month</span></p>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li><i class="fa fa-check-circle-o" ></i>2GB space</li>
+                            <li><i class="fa fa-check-circle-o" ></i>200GB space</li>
+                            <li><i class="fa fa-check-circle-o"></i>50 Email  Account</li>
+                            <li><i class="fa fa-check-circle-o"></i> unlimited domain</li>
+                            <li><i class="fa fa-times-circle-o"></i>Unlimited Support</li>
+                        </ul>
+                    </div>
+                    <div class="price-button">
+                        <a href="#" class="buy-btn ">buy now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="single-price">
+                    <div class="price-head">
+                        <h2>Advanced</h2>
+                        <p>$100/<span>month</span></p>
+                    </div>
+                    <div class="price-content">
+                        <ul>
+                            <li><i class="fa fa-check-circle-o" ></i>50GB space</li>
+                            <li><i class="fa fa-check-circle-o" ></i>unlimited bandwidth</li>
+                            <li><i class="fa fa-check-circle-o"></i>15 Email  Account</li>
+                            <li><i class="fa fa-check-circle-o"></i>unlimited Domain</li>
+                            <li><i class="fa fa-check-circle-o"></i>Unlimited Support</li>
+                        </ul>
+                    </div>
+                    <div class="price-button">
+                        <a href="#" class="buy-btn ">join free</a>
+                    </div>
+                </div>
+            </div>
         </div>
 </div>
+</section>
+<!--------testimonials---------------->
+<section id="testimonials">
+    <div class="container">
+        <h1>Testimonials</h1>
+        <p class="text-center">Subscribe Easy Tutorials bbbbbbbbbbbbbjjjjjjj</p>
+        <div class="row">
+            <div class="col-md-4 text-center">
+            <div class="profile">
+                <img src="/images/team3.jpeg" class="user">
+                <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  
+                    a distinctio ipsa. Iusto dignissimos
+                     animi laborum et eveniet iure ut fuga repellendus
+                </blockquote>
+                <h3>janet <span>co-founder at xyz</span></h3>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="profile">
+                <img src="/images/team2.jpeg" class="user">
+                <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  
+                    a distinctio ipsa. Iusto dignissimos
+                     animi laborum et eveniet iure ut fuga repellendus
+                </blockquote>
+                <h3>Miriam<span>Graphic-Designer at xyz</span></h3>
+            </div>
+        </div>
+        <div class="col-md-4 text-center">
+            <div class="profile">
+                <img src="/images/team4.jpeg" class="user">
+                <blockquote>Lorem ipsum dolor sit, amet consectetur adipisicing elit.  
+                    a distinctio ipsa. Iusto dignissimos
+                     animi laborum et eveniet iure ut fuga repellendus
+                </blockquote>
+                <h3>Jolene<span>manager at XYZ</span></h3>
+            </div>
+        </div>
+        </div>
+
+    </div>
+</section>
+<!------------Get In Touch----------------->
+<section id="contact">
+    <div class="container">
+        <h1>Get in Touch</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <form class="contact-form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Your Name">
+                    </div>
+                </form>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <input type="number" class="form-control" placeholder="Phone Number">
+                    </div>
+                </form>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <input type="email" class="form-control" placeholder="Email ID">
+                    </div>
+                </form>
+                <form class="contact-form">
+                    <div class="form-group">
+                        <textarea  class="form-control" placeholder="Your Message"></textarea>
+                    </div>
+                </form>
+                <button type="submit" class="btn btn-primary">SEND</button>
+            </div>
+            <div class="col-md-6">
+                <form class="contact-form">
+                    <div class="form-group">
+                        <input type="text" class="form-control" row="4" placeholder="yourname">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
 </body>
 </html>
